kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appartement
  namespace: default

spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80

  selector:
    app: appartement
  type: ClusterIP

---
apiVersion: v1
kind: Pod
metadata:
  name: appartement
  namespace: default
  labels:
    app: appartement

spec:
  containers:
    - name: appartement
      image: ghcr.io/atomstudiosfr/appartement:latest
  imagePullSecrets:
    - name: github-container-registry
