kubernetes/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`mosaik.atomdev.fr`)
      kind: Rule
      services:
        - name: appartement
          port: 80
  tls:
    secretName: mosaik-tls
